add project button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       </button>
       <button>randon surprise</button>
     </div>
-    <footer></footer>
+    <div class="space"></div>
+    <footer>
+      <a href="https://github.com/GrandeJovemDev/githubExplorer" class="circle">
+        ?
+      </a>
+    </footer>
   </body>
 </html>
