- add open animation  - add responsitive

--- a/index.html
+++ b/index.html
@@ -15,25 +15,55 @@
     <title>Henrique Nascimento</title>
   </head>
   <body>
-    <span>can i surprise you?</span>
-    <h1>
-      HENRIQUE nascimento
-    </h1>
-    <div class="yellow"></div>
-    <div class="buttons">
-      <button
-        class="yellow"
-        onclick=" window.open('https://www.linkedin.com/in/henrique-nascimento-635a5216b/','_blank')"
-      >
-        i'm already surprise
-      </button>
-      <button>randon surprise</button>
+    <div class="left-gate"></div>
+    <div class="right-gate"></div>
+    <div class="container">
+      <span>can i surprise you?</span>
+      <h1>HENRIQUE nascimento</h1>
+      <div class="divisor"></div>
+      <div class="buttons">
+        <button
+          class="yellow"
+          onclick=" window.open('https://www.linkedin.com/in/henrique-nascimento-635a5216b/','_blank')"
+        >
+          i'm already surprise
+        </button>
+        <button>
+          randon surprise
+        </button>
+      </div>
+      <footer>
+        <ul>
+          <li>
+            <a
+              href="https://github.com/GrandeJovemDev/githubExplorer"
+              class="circle"
+              >?</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/GrandeJovemDev/githubExplorer"
+              class="circle"
+              >?</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/GrandeJovemDev/githubExplorer"
+              class="circle"
+              >?</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/GrandeJovemDev/githubExplorer"
+              class="circle"
+              >?</a
+            >
+          </li>
+        </ul>
+      </footer>
     </div>
-    <div class="space"></div>
-    <footer>
-      <a href="https://github.com/GrandeJovemDev/githubExplorer" class="circle">
-        ?
-      </a>
-    </footer>
   </body>
 </html>
